--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <img src="./logo.png" style="display: block; margin: 0 auto;">
-    <title>LaQoo 官方下载</title>
+    <link rel="icon" href="./logo.png">
+    <title>LaQoo-最新最全动漫免费观看-APP官方下载</title>
 
     <style>
       body {
@@ -62,9 +62,16 @@
   <body>
     <div class="box">
       <div class="card">
+        <img src="./logo.png" style="display: block; margin: 0 auto;">
         <h1 class="title">LaQoo</h1>
         <p class="content" style="white-space: nowrap">
-          一个简洁的播放动漫的App，支持下载，弹幕，多数据源等功能
+          简洁的播放动漫的App
+        </p>
+        <p
+          class="content"
+          style="white-space: nowrap"
+        >
+        支持下载，弹幕，收藏，多动漫源等功能
         </p>
         <p
           class="content"
@@ -72,15 +79,18 @@
         >
         版本：1.1.0
         </p>
-       
-
         <a
           class="btn"
           style="background-color: rgb(255, 4, 0)"
           href="https://github.com/laqoome/LaQoo/releases/download/v1.1.0/LaQoo-v1.1.0-release.apk"
           >立即下载</a
         >
-        
+        <a
+          class="btn"
+          style="background-color: rgb(255, 4, 0)"
+          href="https://pd.qq.com/s/1nh8m8itw"
+          >加入QQ频道</a
+        >
       </div>
     </div>
   </body>
