--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           class="content"
           style="white-space: nowrap"
         >
-        版本：1.1.0
+        （非原创，必应搜索有开源）版本：1.1.0
         </p>
         <a
           class="btn"
