--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./logo.png">
     <title>LaQoo-最新最全动漫免费观看-APP官方下载</title>
+    <meta name="shenma-site-verification" content="a613a39b961eab43198284ae3ce0936e_1739684435">
 
     <style>
       body {
@@ -77,13 +78,25 @@
           class="content"
           style="white-space: nowrap"
         >
-        （非原创，必应搜索有开源）版本：1.1.0
+        版本：1.1.0
         </p>
         <a
           class="btn"
           style="background-color: rgb(255, 4, 0)"
           href="https://github.com/laqoome/LaQoo/releases/download/v1.1.0/LaQoo-v1.1.0-release.apk"
           >立即下载</a
+        >
+                <a
+          class="btn"
+          style="background-color: rgb(255, 4, 0)"
+          href="https://www.123912.com/s/9LpDVv-PLyjh"
+          >备用下载</a
+        >
+                <a
+          class="btn"
+          style="background-color: rgb(255, 4, 0)"
+          href="https://github.com/laqoome/LaQoo/"
+          >开源地址</a
         >
         <a
           class="btn"
