--- a/index.html
+++ b/index.html
@@ -78,26 +78,21 @@
           class="content"
           style="white-space: nowrap"
         >
-        版本：1.1.0
+        （原创不是本人）版本：1.1.0
         </p>
         <a
           class="btn"
           style="background-color: rgb(255, 4, 0)"
           href="https://github.com/laqoome/LaQoo/releases/download/v1.1.0/LaQoo-v1.1.0-release.apk"
-          >立即下载</a
-        >
-                <a
-          class="btn"
-          style="background-color: rgb(255, 4, 0)"
-          href="https://www.123912.com/s/9LpDVv-PLyjh"
           >备用下载</a
         >
                 <a
           class="btn"
           style="background-color: rgb(255, 4, 0)"
-          href="https://github.com/laqoome/LaQoo/"
-          >开源地址</a
+          href="https://www.123912.com/s/9LpDVv-PLyjh"
+          >立即下载</a
         >
+         
         <a
           class="btn"
           style="background-color: rgb(255, 4, 0)"
