--- a/index.html
+++ b/index.html
@@ -1,105 +1,112 @@
 <!DOCTYPE html>
 <html lang="zh">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./logo.png">
-    <title>LaQoo-最新最全动漫免费观看-APP官方下载</title>
+    <!-- 优化标题标签，增加关键词相关性 -->
+    <title>LaQoo - 免费观看动漫APP，支持下载、弹幕、收藏多源播放</title>
     <meta name="shenma-site-verification" content="a613a39b961eab43198284ae3ce0936e_1739684435">
-
+    <!-- 添加元描述，准确描述页面内容，吸引用户点击 -->
+    <meta name="description" content="LaQoo是一款简洁的动漫播放APP，提供免费观看服务，具备下载、弹幕、收藏、多动漫源等功能，版本1.1.0，点击即可下载体验。">
+    <!-- 增加关键词，提高关键词相关性，但避免堆砌 -->
+    <meta name="keywords" content="LaQoo,动漫APP,免费观看,动漫下载,弹幕,收藏,多动漫源">
     <style>
-      body {
-        background-color: #f6f6f6;
-        position: relative;
-        height: 100vh;
-      }
+        body {
+            background-color: #f6f6f6;
+            position: relative;
+            height: 100vh;
+        }
       .box {
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
+            position: absolute;
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
       .title {
-        font-size: 18px;
-        font-weight: 600;
-        width: 100%;
-        white-space: nowrap; /* 文字不换行 */
-        text-align: center;
-        margin-bottom: 0;
-        padding-bottom: 0;
-        margin-bottom: 20px;
-      }
+            font-size: 18px;
+            font-weight: 600;
+            width: 100%;
+            white-space: nowrap;
+            text-align: center;
+            margin-bottom: 0;
+            padding-bottom: 0;
+            margin-bottom: 20px;
+        }
       .card {
-        border-radius: 4px;
-        padding: 20px 50px 20px 50px;
-        background-color: white;
-        max-width: 500px;
-        min-width: 250px;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-      }
+            border-radius: 4px;
+            padding: 20px 50px 20px 50px;
+            background-color: white;
+            max-width: 500px;
+            min-width: 250px;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
       .content {
-        font-size: 14px;
-        color: gray;
-        text-align: center;
-        padding: 0;
-        margin: 0;
-      }
+            font-size: 14px;
+            color: gray;
+            text-align: center;
+            padding: 0;
+            margin: 0;
+        }
       .btn {
-        margin-top: 20px;
-        border-radius: 4px;
-        padding: 10px 20px 10px 20px;
-        white-space: nowrap; /* 文字不换行 */
-        background-color: #aeecff;
-        color: white;
-        text-decoration: none;
-        font-size: 14px;
-        text-align: center;
-      }
+            margin-top: 20px;
+            border-radius: 4px;
+            padding: 10px 20px 10px 20px;
+            white-space: nowrap;
+            background-color: #aeecff;
+            color: white;
+            text-decoration: none;
+            font-size: 14px;
+            text-align: center;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <div class="box">
-      <div class="card">
-        <img src="./logo.png" style="display: block; margin: 0 auto;">
-        <h1 class="title">LaQoo</h1>
-        <p class="content" style="white-space: nowrap">
-          简洁的播放动漫的App
-        </p>
-        <p
-          class="content"
-          style="white-space: nowrap"
-        >
-        支持下载，弹幕，收藏，多动漫源等功能
-        </p>
-        <p
-          class="content"
-          style="white-space: nowrap"
-        >
-        （原创不是本人）版本：1.1.0
-        </p>
-        <a
-          class="btn"
-          style="background-color: rgb(255, 4, 0)"
-          href="https://github.com/laqoome/LaQoo/releases/download/v1.1.0/LaQoo-v1.1.0-release.apk"
-          >备用下载</a
-        >
-                <a
-          class="btn"
-          style="background-color: rgb(255, 4, 0)"
-          href="https://www.123912.com/s/9LpDVv-PLyjh"
-          >立即下载</a
-        >
-         
-        <a
-          class="btn"
-          style="background-color: rgb(255, 4, 0)"
-          href="https://pd.qq.com/s/1nh8m8itw"
-          >加入QQ频道</a
-        >
-      </div>
+        <div class="card">
+            <!-- 优化图片，添加alt属性描述图片内容 -->
+            <img src="./logo.png" style="display: block; margin: 0 auto;" alt="LaQoo APP logo">
+            <h1 class="title">LaQoo</h1>
+            <p class="content" style="white-space: nowrap">
+                简洁的播放动漫的App
+            </p>
+            <p
+                class="content"
+                style="white-space: nowrap"
+            >
+                支持下载，弹幕，收藏，多动漫源等功能
+            </p>
+            <p
+                class="content"
+                style="white-space: nowrap"
+            >
+                版本：1.1.0
+            </p>
+            <a
+                class="btn"
+                style="background-color: rgb(255, 4, 0)"
+                href="https://www.123912.com/s/9LpDVv-PLyjh"
+                >立即下载</a
+            >
+            <a
+                class="btn"
+                style="background-color: rgb(255, 4, 0)"
+                href="https://pd.qq.com/s/1nh8m8itw"
+                >加入QQ频道</a
+            >
+            <a
+                class="btn"
+                style="background-color: rgb(255, 4, 0)"
+                href="https://github.com/laqoome/LaQoo"
+                >源代码</a
+            >
+            <p class="content" style="white-space: nowrap">
+                APP源码来自于lanlinju/Animius的Animius项目
+            </p>
+        </div>
     </div>
-  </body>
+</body>
 </html>
