--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
             >
                 支持下载，弹幕，收藏，多动漫源等功能
             </p>
-            <p
+            <p  style="color:red
                 class="content"
                 style="white-space: nowrap"
             >
-                版本：1.1.0
+                版本：1.2.0
             </p>
             <a
                 class="btn"
