--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             >
                 支持下载，弹幕，收藏，多动漫源等功能
             </p>
-            <p  style="color:red
+            <p  
                 class="content"
-                style="white-space: nowrap"
+                style="color:red;white-space: nowrap"
             >
                 版本：1.2.0
             </p>
