--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 class="btn"
                 style="background-color: rgb(255, 4, 0)"
                 href="https://github.com/laqoome/LaQoo"
-                >源代码</a
+                >GITHUB源代码</a
             >
         </div>
     </div>
